Updating objectives to be set using expressions

--- a/Job Shop Scheduling Problem (JSSP)/example_small.ipynb
+++ b/Job Shop Scheduling Problem (JSSP)/example_small.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,9 +174,24 @@
     "\n",
     "x = model_JSSP.add_variable_vector('x', Nx, Vtype.INTEGER, variable_bounds=variable_bounds[:Nx].tolist())\n",
     "z = model_JSSP.add_variable_vector('z', Nz, Vtype.BINARY)\n",
-    "y = model_JSSP.add_variable_vector('y', Ny, Vtype.BINARY)\n",
-    "\n",
-    "model_JSSP.set_objective_matrices(W, b, Target.MINIMIZE)"
+    "y = model_JSSP.add_variable_vector('y', Ny, Vtype.BINARY)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting Objective Using Expression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expr = sum(x[i] for i in problem_gen.last_task_for_each_job(jobs))\n",
+    "model_JSSP.set_objective_expression(expr)"
    ]
   },
   {
@@ -188,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +338,7 @@
       "---------------+--------------------------\n",
       "Ising energy   | Result vector\n",
       "---------------+--------------------------\n",
-      "4.000000       | [0. 2. 0. 2. 0. 1. 0. 0. 0. 0. 1. 1. 1. 1. 1. 0.]\n"
+      "3.000000       | [0. 2. 0. 1. 0. 1. 1. 0. 1. 1. 1. 1. 1. 1. 1. 1.]\n"
      ]
     }
    ],
@@ -359,16 +374,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start_times=array([0., 2., 0., 2.])\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -379,12 +387,12 @@
         {
          "alignmentgroup": "True",
          "base": [
-          "2024-12-12",
-          "2024-12-14",
-          "2024-12-12",
-          "2024-12-14",
-          "2024-12-14",
-          "2024-12-15"
+          "2025-03-19",
+          "2025-03-21",
+          "2025-03-19",
+          "2025-03-20",
+          "2025-03-21",
+          "2025-03-22"
          ],
          "hovertemplate": "<b>%{hovertext}</b><br><br>Job=<br>Start=%{base}<br>Finish=%{x}<br>Machine=%{y}<extra></extra>",
          "hovertext": [
@@ -430,8 +438,8 @@
         {
          "alignmentgroup": "True",
          "base": [
-          "2024-12-12",
-          "2024-12-14"
+          "2025-03-19",
+          "2025-03-21"
          ],
          "hovertemplate": "<b>%{hovertext}</b><br><br>Job=Job1<br>Start=%{base}<br>Finish=%{x}<br>Machine=%{y}<extra></extra>",
          "hovertext": [
@@ -465,8 +473,8 @@
         {
          "alignmentgroup": "True",
          "base": [
-          "2024-12-12",
-          "2024-12-14"
+          "2025-03-19",
+          "2025-03-20"
          ],
          "hovertemplate": "<b>%{hovertext}</b><br><br>Job=Job2<br>Start=%{base}<br>Finish=%{x}<br>Machine=%{y}<extra></extra>",
          "hovertext": [
@@ -500,8 +508,8 @@
         {
          "alignmentgroup": "True",
          "base": [
-          "2024-12-14",
-          "2024-12-15"
+          "2025-03-21",
+          "2025-03-22"
          ],
          "hovertemplate": "<b>%{hovertext}</b><br><br>Job=Hand-off<br>Start=%{base}<br>Finish=%{x}<br>Machine=%{y}<extra></extra>",
          "hovertext": [
@@ -1372,8 +1380,8 @@
          ],
          "dtick": "M1",
          "range": [
-          "2024-12-12",
-          "2024-12-16"
+          "2025-03-19",
+          "2025-03-23"
          ],
          "showgrid": true,
          "ticklabelmode": "period",
@@ -1432,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1441,7 +1449,7 @@
        "3.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
