--- a/Portfolio Optimization/example.ipynb
+++ b/Portfolio Optimization/example.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Copyright (c) 2024, InfinityQ Technology Inc.\n",
+    "# Copyright (c) 2025, InfinityQ Technology Inc.\n",
     "\n",
     "import numpy as np\n",
     "import yfinance as yf\n",
@@ -62,20 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%%**********************]  7 of 7 completed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read in tickers and weights from the instance file\n",
-    "instance = \"simple example\"\n",
+    "instance = \"S&P 500\"\n",
     "tickers, weights = read_instance(f\"instances/{instance}\")\n",
     "\n",
     "# Fetch historical data from Yahoo Finance\n",
@@ -84,7 +76,7 @@
     "period = 'Y'\n",
     "\n",
     "# Get daily closing prices\n",
-    "close_prices = yf.download(tickers, start=start_date, end=end_date)['Adj Close'][tickers]\n",
+    "close_prices = yf.download(tickers, start=start_date, end=end_date, auto_adjust=True)[\"Close\"][tickers]\n",
     "\n",
     "# Prune delisted stocks\n",
     "close_prices = close_prices.dropna(axis=1, how='all')\n",
@@ -111,39 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "~~~~~~~~~~~~~ Correlation Matrix ~~~~~~~~~~~~~\n",
-      "Ticker      AAPL      SHEL      TSLA       GIS       MCD        KO        BB\n",
-      "Ticker                                                                      \n",
-      "AAPL    0.000000 -0.205107  0.432150  0.155827  0.168842  0.148175  0.506853\n",
-      "SHEL   -0.205107  0.000000 -0.567325  0.105867  0.165332  0.219773  0.017018\n",
-      "TSLA    0.432150 -0.567325  0.000000  0.102988 -0.051367 -0.136086  0.120917\n",
-      "GIS     0.155827  0.105867  0.102988  0.000000  0.023428  0.519516 -0.162707\n",
-      "MCD     0.168842  0.165332 -0.051367  0.023428  0.000000  0.312786  0.244036\n",
-      "KO      0.148175  0.219773 -0.136086  0.519516  0.312786  0.000000 -0.040251\n",
-      "BB      0.506853  0.017018  0.120917 -0.162707  0.244036 -0.040251  0.000000\n",
-      "\n",
-      "~~~~~~~~~~~~~ Adjacency Matrix ~~~~~~~~~~~~~\n",
-      "[[0. 1. 1. 0. 0. 0. 1.]\n",
-      " [1. 0. 1. 0. 0. 1. 0.]\n",
-      " [1. 1. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 1. 0.]\n",
-      " [0. 0. 0. 0. 0. 1. 1.]\n",
-      " [0. 1. 0. 1. 1. 0. 0.]\n",
-      " [1. 0. 0. 0. 1. 0. 0.]]\n",
-      "Graph density: 38.10%\n",
-      "\n",
-      "~~~~~~~~~~~~~ Weights ~~~~~~~~~~~~~\n",
-      "[ 27.   6.  43.   8.  15.   9. -19.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Display results of computations above\n",
     "print(\"~~~~~~~~~~~~~ Correlation Matrix ~~~~~~~~~~~~~\")\n",
@@ -163,29 +125,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Formulating The Weight Matrix And Bias Vector For The TitanQ SDK\n",
-    "Here we prepare the input for the TitanQ SDK. The weight matrix is simply the $J$-matrix multiplied by the hyperparameter $A$. The bias vector is the weights vector multiplied by $-B$, where $B$ is also a hyperparameter. Recall that the $A$ term punishes the selection of nodes that are connected by an edge, and the $B$ term maximizes the total weight among selected nodes. In general, the hyperparameters should be set with $A > B$ to increase the likelihood of generating a set that is independent."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Hyperparameters to tune\n",
-    "A = 1\n",
-    "B = 0.02\n",
-    "\n",
-    "# Construct the weight matrix and bias vector for QUBO\n",
-    "weight_matrix = A * J_matrix\n",
-    "bias_vector = -1 * B * weights"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Inputting The Problem Into The TitanQ SDK\n",
     "Here the user should provide the credentials they defined earlier. The user also defines the variables of the problem as well as the type of variable.\n",
     "\n",
@@ -194,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,8 +149,22 @@
     "    #     bucket_name=AWS_BUCKET_NAME\n",
     "    # )\n",
     ")\n",
-    "model.add_variable_vector('x', size, Vtype.BINARY)\n",
-    "model.set_objective_matrices(weight_matrix, bias_vector, Target.MINIMIZE)"
+    "\n",
+    "x = model.add_variable_vector('x', size, Vtype.BINARY)\n",
+    "\n",
+    "# Hyperparameters to tune\n",
+    "A = 1\n",
+    "B = 0.02\n",
+    "\n",
+    "# Setting Objective Using Expression\n",
+    "expr = A*0.5*np.dot(x.T, J_matrix.dot(x))-B*weights.dot(x)\n",
+    "model.set_objective_expression(expr)\n",
+    "\n",
+    "# Construct Constraints\n",
+    "mask = np.zeros(size, dtype=np.float32)\n",
+    "mask[0] = 1\n",
+    "constraint_bound = np.array([0, 1], dtype=np.float32)\n",
+    "model.add_inequality_constraint(mask, constraint_bound)"
    ]
   },
   {
@@ -223,17 +176,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TitanQ Solver Hyperparameters\n",
-    "coupling_mult = 0.75\n",
-    "timeout_in_secs = 5\n",
+    "coupling_mult = 0.1\n",
+    "timeout_in_secs = 0.1\n",
     "num_chains = 8\n",
     "num_engines = 1\n",
-    "Tmin = 0.05\n",
-    "Tmax = 1\n",
+    "Tmin = 0.01\n",
+    "Tmax = 0.64\n",
+    "\n",
     "beta = (1/np.linspace(Tmin, Tmax, num_chains, dtype=np.float32)).tolist()\n",
     "\n",
     "response = model.optimize(beta = beta, coupling_mult=coupling_mult, timeout_in_secs=timeout_in_secs, num_chains=num_chains, num_engines=num_engines)"
@@ -258,31 +212,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-------- ALL ENGINE RESULTS --------\n",
-      "\n",
-      "--- Engine 1 ---\n",
-      "     x: [0. 0. 1. 1. 1. 0. 0.]\n",
-      "stocks: ['TSLA', 'GIS', 'MCD']\n",
-      "weight: 66.0\n",
-      "energy: -1.3199999332427979\n",
-      "This solution is valid! The corresponding set of nodes is independent.\n",
-      "\n",
-      "-------- BEST VALID SOLUTION --------\n",
-      "--- Engine 1 ---\n",
-      "     x: [0. 0. 1. 1. 1. 0. 0.]\n",
-      "stocks: ['TSLA', 'GIS', 'MCD']\n",
-      "weight: 66.0\n",
-      "energy: -1.3199999332427979\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Keep track of the index and the weight of the best solution\n",
     "best_idx = -1\n",
@@ -333,7 +265,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "algorithms_repo_env",
    "language": "python",
    "name": "python3"
   },
