--- a/Job Shop Scheduling Problem (JSSP)/example_medium.ipynb
+++ b/Job Shop Scheduling Problem (JSSP)/example_medium.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,9 +174,24 @@
     "\n",
     "x = model_JSSP.add_variable_vector('x', Nx, Vtype.INTEGER, variable_bounds=variable_bounds[:Nx].tolist())\n",
     "z = model_JSSP.add_variable_vector('z', Nz, Vtype.BINARY)\n",
-    "y = model_JSSP.add_variable_vector('y', Ny, Vtype.BINARY)\n",
-    "\n",
-    "model_JSSP.set_objective_matrices(W, b, Target.MINIMIZE)"
+    "y = model_JSSP.add_variable_vector('y', Ny, Vtype.BINARY)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting Objective Using Expression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expr = sum(x[i] for i in problem_gen.last_task_for_each_job(jobs))\n",
+    "model_JSSP.set_objective_expression(expr)"
    ]
   },
   {
@@ -188,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -323,22 +338,22 @@
       "---------------+--------------------------\n",
       "Ising energy   | Result vector\n",
       "---------------+--------------------------\n",
-      "266.000000     | [ 9. 11. 14. 20. 27. 39.  3. 24. 29. 39. 49. 59. 14. 27. 31. 40. 51. 53.\n",
-      " 20. 25. 31. 41. 45. 53.  0. 11. 15. 21. 30. 33.  0.  3.  6. 15. 25. 29.\n",
-      "  0.  1.  1.  1.  0.  1.  0.  1.  1.  1.  1.  1.  0.  0.  1.  1.  0.  0.\n",
-      "  1.  1.  1.  1.  1.  0.  0.  1.  1.  1.  0.  0.  1.  0.  1.  1.  0.  0.\n",
-      "  1.  1.  1.  1.  1.  0.  0.  0.  0.  1.  0.  1.  0.  0.  1.  1.  0.  0.\n",
-      "  0.  0.  0.  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
-      "  0.  0.  1.  1.  0.  1.  0.  0.  1.  1.  1.  0.  1.  0.  0.  1.  0.  0.\n",
-      "  0.  0.  0.  0.  0.  0.  1.  0.  1.  0.  0.  0.  1.  0.  0.  0.  0.  0.\n",
-      "  0.  0.  0.  1.  0.  0.  1.  1.  0.  0.  1.  0.  0.  0.  0.  0.  0.  0.\n",
-      "  1.  1.  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
-      "  1.  0.  0.  0.  1.  1.  0.  0.  0.  0.  0.  0.  1.  0.  0.  0.  1.  1.\n",
-      "  0.  0.  0.  1.  0.  0.  1.  1.  0.  0.  0.  0.  0.  1.  1.  0.  1.  0.\n",
-      "  1.  0.  0.  0.  1.  0.  0.  0.  0.  1.  0.  1.  0.  1.  1.  1.  0.  0.\n",
-      "  1.  0.  0.  0.  0.  1.  0.  0.  1.  0.  0.  1.  0.  0.  0.  1.  0.  0.\n",
-      "  0.  1.  1.  0.  0.  0.  1.  0.  0.  0.  0.  0.  1.  1.  1.  0.  0.  1.\n",
-      "  0.  0.  1.  0.  0.  1.  0.  1.  0.  0.  0.  1.  1.  0.  1.  0.  0.  1.]\n"
+      "186.000000     | [ 0.  1.  5. 10. 17. 20. 15. 23. 28. 38. 39. 44.  1.  6. 20. 28. 37. 38.\n",
+      "  1.  7. 12. 17. 20. 28.  3. 12. 15. 20. 24. 27.  0.  3.  6. 15. 26. 29.\n",
+      "  0.  1.  1.  1.  1.  1.  0.  1.  1.  1.  1.  1.  1.  1.  1.  0.  1.  0.\n",
+      "  1.  1.  0.  1.  1.  0.  1.  1.  1.  1.  1.  0.  1.  1.  1.  1.  0.  1.\n",
+      "  0.  0.  1.  0.  0.  0.  1.  1.  0.  0.  0.  1.  0.  1.  1.  0.  0.  0.\n",
+      "  0.  1.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.\n",
+      "  1.  1.  0.  1.  1.  1.  1.  0.  0.  1.  1.  0.  1.  0.  0.  1.  0.  0.\n",
+      "  1.  1.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.  1.  1.  0.  0.  0.  0.\n",
+      "  0.  0.  1.  0.  1.  0.  1.  0.  0.  0.  1.  1.  0.  0.  1.  1.  0.  1.\n",
+      "  0.  1.  1.  0.  1.  0.  0.  0.  1.  0.  0.  1.  0.  0.  0.  1.  0.  0.\n",
+      "  1.  0.  1.  1.  0.  1.  0.  1.  1.  1.  0.  0.  0.  0.  0.  0.  0.  1.\n",
+      "  1.  0.  1.  0.  0.  0.  1.  0.  0.  0.  1.  0.  0.  1.  1.  0.  1.  0.\n",
+      "  0.  0.  1.  0.  1.  1.  0.  1.  1.  0.  0.  1.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  1.  1.  1.  0.  1.  0.  1.  1.  0.  0.  1.  0.  0.  0.  1.  1.  0.\n",
+      "  0.  1.  0.  1.  0.  0.  0.  1.  1.  0.  0.  0.  0.  0.  0.  1.  0.  0.\n",
+      "  1.  1.  0.  0.  1.  0.  0.  0.  0.  1.  1.  1.  0.  0.  1.  0.  0.  0.]\n"
      ]
     }
    ],
@@ -374,18 +389,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start_times=array([ 9., 11., 14., 20., 27., 39.,  3., 24., 29., 39., 49., 59., 14.,\n",
-      "       27., 31., 40., 51., 53., 20., 25., 31., 41., 45., 53.,  0., 11.,\n",
-      "       15., 21., 30., 33.,  0.,  3.,  6., 15., 25., 29.])\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -396,76 +402,76 @@
         {
          "alignmentgroup": "True",
          "base": [
-          "2024-12-21",
-          "2024-12-23",
-          "2024-12-26",
-          "2025-01-01",
-          "2025-01-08",
-          "2025-01-20",
-          "2024-12-15",
-          "2025-01-05",
-          "2025-01-10",
-          "2025-01-20",
-          "2025-01-30",
-          "2025-02-09",
-          "2024-12-26",
-          "2025-01-08",
-          "2025-01-12",
-          "2025-01-21",
-          "2025-02-01",
-          "2025-02-03",
-          "2025-01-01",
-          "2025-01-06",
-          "2025-01-12",
-          "2025-01-22",
-          "2025-01-26",
-          "2025-02-03",
-          "2024-12-12",
-          "2024-12-23",
-          "2024-12-27",
-          "2025-01-02",
-          "2025-01-11",
-          "2025-01-14",
-          "2024-12-12",
-          "2024-12-15",
-          "2024-12-18",
-          "2024-12-27",
-          "2025-01-06",
-          "2025-01-10",
-          "2024-12-22",
-          "2024-12-26",
-          "2025-01-01",
-          "2025-01-08",
-          "2025-01-11",
-          "2025-01-26",
-          "2024-12-23",
-          "2025-01-10",
-          "2025-01-20",
-          "2025-01-30",
-          "2025-02-09",
-          "2025-02-13",
-          "2024-12-31",
-          "2025-01-12",
-          "2025-01-20",
-          "2025-01-30",
-          "2025-02-02",
-          "2025-02-10",
-          "2025-01-06",
-          "2025-01-11",
-          "2025-01-17",
-          "2025-01-25",
-          "2025-02-03",
-          "2025-02-12",
-          "2024-12-21",
-          "2024-12-26",
-          "2025-01-01",
-          "2025-01-06",
-          "2025-01-14",
-          "2025-01-15",
-          "2024-12-15",
-          "2024-12-18",
-          "2024-12-27",
-          "2025-01-06"
+          "2025-03-19",
+          "2025-03-20",
+          "2025-03-24",
+          "2025-03-29",
+          "2025-04-05",
+          "2025-04-08",
+          "2025-04-03",
+          "2025-04-11",
+          "2025-04-16",
+          "2025-04-26",
+          "2025-04-27",
+          "2025-05-02",
+          "2025-03-20",
+          "2025-03-25",
+          "2025-04-08",
+          "2025-04-16",
+          "2025-04-25",
+          "2025-04-26",
+          "2025-03-20",
+          "2025-03-26",
+          "2025-03-31",
+          "2025-04-05",
+          "2025-04-08",
+          "2025-04-16",
+          "2025-03-22",
+          "2025-03-31",
+          "2025-04-03",
+          "2025-04-08",
+          "2025-04-12",
+          "2025-04-15",
+          "2025-03-19",
+          "2025-03-22",
+          "2025-03-25",
+          "2025-04-03",
+          "2025-04-14",
+          "2025-04-17",
+          "2025-03-20",
+          "2025-03-23",
+          "2025-03-30",
+          "2025-04-05",
+          "2025-04-08",
+          "2025-04-14",
+          "2025-04-11",
+          "2025-04-16",
+          "2025-04-26",
+          "2025-05-06",
+          "2025-05-07",
+          "2025-05-06",
+          "2025-03-25",
+          "2025-03-29",
+          "2025-04-16",
+          "2025-04-25",
+          "2025-04-26",
+          "2025-05-03",
+          "2025-03-25",
+          "2025-03-31",
+          "2025-04-05",
+          "2025-04-08",
+          "2025-04-16",
+          "2025-04-25",
+          "2025-03-31",
+          "2025-04-03",
+          "2025-04-08",
+          "2025-04-12",
+          "2025-04-15",
+          "2025-04-16",
+          "2025-03-22",
+          "2025-03-25",
+          "2025-04-03",
+          "2025-04-13"
          ],
          "hovertemplate": "<b>%{hovertext}</b><br><br>Job=<br>Start=%{base}<br>Finish=%{x}<br>Machine=%{y}<extra></extra>",
          "hovertext": [
@@ -703,12 +709,12 @@
         {
          "alignmentgroup": "True",
          "base": [
-          "2024-12-21",
-          "2024-12-23",
-          "2024-12-26",
-          "2025-01-01",
-          "2025-01-08",
-          "2025-01-20"
+          "2025-03-19",
+          "2025-03-20",
+          "2025-03-24",
+          "2025-03-29",
+          "2025-04-05",
+          "2025-04-08"
          ],
          "hovertemplate": "<b>%{hovertext}</b><br><br>Job=Job1<br>Start=%{base}<br>Finish=%{x}<br>Machine=%{y}<extra></extra>",
          "hovertext": [
@@ -754,12 +760,12 @@
         {
          "alignmentgroup": "True",
          "base": [
-          "2024-12-15",
-          "2025-01-05",
-          "2025-01-10",
-          "2025-01-20",
-          "2025-01-30",
-          "2025-02-09"
+          "2025-04-03",
+          "2025-04-11",
+          "2025-04-16",
+          "2025-04-26",
+          "2025-04-27",
+          "2025-05-02"
          ],
          "hovertemplate": "<b>%{hovertext}</b><br><br>Job=Job2<br>Start=%{base}<br>Finish=%{x}<br>Machine=%{y}<extra></extra>",
          "hovertext": [
@@ -805,12 +811,12 @@
         {
          "alignmentgroup": "True",
          "base": [
-          "2024-12-26",
-          "2025-01-08",
-          "2025-01-12",
-          "2025-01-21",
-          "2025-02-01",
-          "2025-02-03"
+          "2025-03-20",
+          "2025-03-25",
+          "2025-04-08",
+          "2025-04-16",
+          "2025-04-25",
+          "2025-04-26"
          ],
          "hovertemplate": "<b>%{hovertext}</b><br><br>Job=Job3<br>Start=%{base}<br>Finish=%{x}<br>Machine=%{y}<extra></extra>",
          "hovertext": [
@@ -856,12 +862,12 @@
         {
          "alignmentgroup": "True",
          "base": [
-          "2025-01-01",
-          "2025-01-06",
-          "2025-01-12",
-          "2025-01-22",
-          "2025-01-26",
-          "2025-02-03"
+          "2025-03-20",
+          "2025-03-26",
+          "2025-03-31",
+          "2025-04-05",
+          "2025-04-08",
+          "2025-04-16"
          ],
          "hovertemplate": "<b>%{hovertext}</b><br><br>Job=Job4<br>Start=%{base}<br>Finish=%{x}<br>Machine=%{y}<extra></extra>",
          "hovertext": [
@@ -907,12 +913,12 @@
         {
          "alignmentgroup": "True",
          "base": [
-          "2024-12-12",
-          "2024-12-23",
-          "2024-12-27",
-          "2025-01-02",
-          "2025-01-11",
-          "2025-01-14"
+          "2025-03-22",
+          "2025-03-31",
+          "2025-04-03",
+          "2025-04-08",
+          "2025-04-12",
+          "2025-04-15"
          ],
          "hovertemplate": "<b>%{hovertext}</b><br><br>Job=Job5<br>Start=%{base}<br>Finish=%{x}<br>Machine=%{y}<extra></extra>",
          "hovertext": [
@@ -958,12 +964,12 @@
         {
          "alignmentgroup": "True",
          "base": [
-          "2024-12-12",
-          "2024-12-15",
-          "2024-12-18",
-          "2024-12-27",
-          "2025-01-06",
-          "2025-01-10"
+          "2025-03-19",
+          "2025-03-22",
+          "2025-03-25",
+          "2025-04-03",
+          "2025-04-14",
+          "2025-04-17"
          ],
          "hovertemplate": "<b>%{hovertext}</b><br><br>Job=Job6<br>Start=%{base}<br>Finish=%{x}<br>Machine=%{y}<extra></extra>",
          "hovertext": [
@@ -1009,40 +1015,40 @@
         {
          "alignmentgroup": "True",
          "base": [
-          "2024-12-22",
-          "2024-12-26",
-          "2025-01-01",
-          "2025-01-08",
-          "2025-01-11",
-          "2025-01-26",
-          "2024-12-23",
-          "2025-01-10",
-          "2025-01-20",
-          "2025-01-30",
-          "2025-02-09",
-          "2025-02-13",
-          "2024-12-31",
-          "2025-01-12",
-          "2025-01-20",
-          "2025-01-30",
-          "2025-02-02",
-          "2025-02-10",
-          "2025-01-06",
-          "2025-01-11",
-          "2025-01-17",
-          "2025-01-25",
-          "2025-02-03",
-          "2025-02-12",
-          "2024-12-21",
-          "2024-12-26",
-          "2025-01-01",
-          "2025-01-06",
-          "2025-01-14",
-          "2025-01-15",
-          "2024-12-15",
-          "2024-12-18",
-          "2024-12-27",
-          "2025-01-06"
+          "2025-03-20",
+          "2025-03-23",
+          "2025-03-30",
+          "2025-04-05",
+          "2025-04-08",
+          "2025-04-14",
+          "2025-04-11",
+          "2025-04-16",
+          "2025-04-26",
+          "2025-05-06",
+          "2025-05-07",
+          "2025-05-06",
+          "2025-03-25",
+          "2025-03-29",
+          "2025-04-16",
+          "2025-04-25",
+          "2025-04-26",
+          "2025-05-03",
+          "2025-03-25",
+          "2025-03-31",
+          "2025-04-05",
+          "2025-04-08",
+          "2025-04-16",
+          "2025-04-25",
+          "2025-03-31",
+          "2025-04-03",
+          "2025-04-08",
+          "2025-04-12",
+          "2025-04-15",
+          "2025-04-16",
+          "2025-03-22",
+          "2025-03-25",
+          "2025-04-03",
+          "2025-04-13"
          ],
          "hovertemplate": "<b>%{hovertext}</b><br><br>Job=Hand-off<br>Start=%{base}<br>Finish=%{x}<br>Machine=%{y}<extra></extra>",
          "hovertext": [
@@ -2009,8 +2015,8 @@
          ],
          "dtick": "M1",
          "range": [
-          "2024-12-12",
-          "2025-02-14"
+          "2025-03-19",
+          "2025-05-08"
          ],
          "showgrid": true,
          "ticklabelmode": "period",
@@ -2069,16 +2075,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "63.0"
+       "49.0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
