--- a/Maximum Clique/example.ipynb
+++ b/Maximum Clique/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,26 +60,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of vertices: N=125\n",
-      "-------- Adjacency Matrix --------\n",
-      "[[0. 1. 1. ... 1. 1. 1.]\n",
-      " [1. 0. 0. ... 1. 1. 1.]\n",
-      " [1. 0. 0. ... 1. 1. 1.]\n",
-      " ...\n",
-      " [1. 1. 1. ... 0. 1. 1.]\n",
-      " [1. 1. 1. ... 1. 0. 1.]\n",
-      " [1. 1. 1. ... 1. 1. 0.]]\n",
-      "----------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Display adjacency matrix from above\n",
     "print(f'Number of vertices: {N=}')\n",
@@ -98,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,8 +132,12 @@
     "    #     bucket_name=AWS_BUCKET_NAME\n",
     "    # )\n",
     ")\n",
-    "model.add_variable_vector(name = 'x', size = N, vtype = Vtype.BINARY)\n",
-    "model.set_objective_matrices(weights, bias, target = Target.MINIMIZE)\n",
+    "x = model.add_variable_vector(name = 'x', size = N, vtype = Vtype.BINARY)\n",
+    "\n",
+    "#Set objective using expression\n",
+    "expr = sum(-1*x)\n",
+    "model.set_objective_expression(expr)\n",
+    "\n",
     "model.add_quadratic_equality_constraint(quadratic_constraint_mask, quadratic_constraint_limit)"
    ]
   },
@@ -163,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,49 +187,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-------- All Engine Results --------\n",
-      "\n",
-      "---- Engine 1 ----\n",
-      "\tClique Size = 34\t Clique = [4, 8, 10, 13, 16, 18, 23, 24, 28, 30, 33, 39, 43, 44, 48, 51, 53, 54, 64, 65, 66, 69, 76, 78, 79, 95, 97, 98, 102, 103, 109, 116, 121, 124]\n",
-      "\t which is a clique.\n",
-      "\n",
-      "---- Engine 2 ----\n",
-      "\tClique Size = 34\t Clique = [0, 1, 4, 6, 8, 10, 17, 24, 28, 30, 33, 39, 43, 44, 47, 48, 53, 59, 67, 69, 70, 76, 78, 79, 98, 100, 109, 113, 114, 116, 120, 121, 122, 124]\n",
-      "\t which is a clique.\n",
-      "\n",
-      "---- Engine 3 ----\n",
-      "\tClique Size = 34\t Clique = [0, 4, 6, 8, 10, 12, 16, 18, 23, 24, 28, 30, 33, 43, 44, 48, 51, 53, 54, 65, 69, 76, 78, 79, 84, 95, 97, 98, 102, 103, 109, 116, 121, 124]\n",
-      "\t which is a clique.\n",
-      "\n",
-      "---- Engine 4 ----\n",
-      "\tClique Size = 34\t Clique = [0, 4, 6, 8, 10, 16, 18, 24, 28, 30, 33, 43, 44, 48, 51, 54, 65, 69, 76, 78, 79, 81, 84, 90, 95, 97, 102, 103, 109, 113, 116, 120, 121, 124]\n",
-      "\t which is a clique.\n",
-      "\n",
-      "---- Engine 5 ----\n",
-      "\tClique Size = 34\t Clique = [4, 6, 8, 10, 16, 18, 23, 24, 28, 30, 33, 39, 43, 48, 51, 53, 54, 64, 65, 66, 69, 76, 78, 79, 81, 92, 95, 97, 102, 103, 109, 116, 121, 124]\n",
-      "\t which is a clique.\n",
-      "\n",
-      "---- Engine 6 ----\n",
-      "\tClique Size = 34\t Clique = [0, 4, 6, 8, 10, 16, 18, 24, 28, 30, 33, 43, 44, 48, 51, 53, 54, 64, 65, 69, 76, 78, 79, 84, 95, 97, 98, 102, 103, 109, 113, 116, 121, 124]\n",
-      "\t which is a clique.\n",
-      "\n",
-      "---- Engine 7 ----\n",
-      "\tClique Size = 34\t Clique = [4, 6, 8, 10, 12, 18, 24, 28, 30, 33, 43, 44, 48, 49, 51, 53, 54, 65, 66, 67, 69, 76, 79, 84, 95, 97, 98, 102, 103, 109, 113, 116, 121, 124]\n",
-      "\t which is a clique.\n",
-      "\n",
-      "---- Engine 8 ----\n",
-      "\tClique Size = 34\t Clique = [0, 4, 6, 8, 10, 12, 18, 24, 28, 30, 33, 39, 43, 44, 48, 51, 54, 65, 67, 69, 76, 78, 79, 90, 95, 97, 98, 102, 103, 109, 113, 116, 121, 124]\n",
-      "\t which is a clique.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "best_idx = -1\n",
     "best_size = 0\n",
@@ -263,20 +210,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "-------- Best Solution --------\n",
-      "---- Engine 1 ----\n",
-      "\tClique Size = 34\t Clique = [4, 8, 10, 13, 16, 18, 23, 24, 28, 30, 33, 39, 43, 44, 48, 51, 53, 54, 64, 65, 66, 69, 76, 78, 79, 95, 97, 98, 102, 103, 109, 116, 121, 124]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('\\n-------- Best Solution --------')\n",
     "if best_idx == -1:\n",
@@ -290,7 +226,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hydrogen",
+   "display_name": "algorithms_repo_env",
    "language": "python",
    "name": "python3"
   },
