Updates to JSSP and portfolio optimization examples

--- a/Job Shop Scheduling Problem (JSSP)/example_medium.ipynb
+++ b/Job Shop Scheduling Problem (JSSP)/example_medium.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -338,22 +338,22 @@
       "---------------+--------------------------\n",
       "Ising energy   | Result vector\n",
       "---------------+--------------------------\n",
-      "186.000000     | [ 0.  1.  5. 10. 17. 20. 15. 23. 28. 38. 39. 44.  1.  6. 20. 28. 37. 38.\n",
-      "  1.  7. 12. 17. 20. 28.  3. 12. 15. 20. 24. 27.  0.  3.  6. 15. 26. 29.\n",
-      "  0.  1.  1.  1.  1.  1.  0.  1.  1.  1.  1.  1.  1.  1.  1.  0.  1.  0.\n",
-      "  1.  1.  0.  1.  1.  0.  1.  1.  1.  1.  1.  0.  1.  1.  1.  1.  0.  1.\n",
-      "  0.  0.  1.  0.  0.  0.  1.  1.  0.  0.  0.  1.  0.  1.  1.  0.  0.  0.\n",
-      "  0.  1.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.\n",
-      "  1.  1.  0.  1.  1.  1.  1.  0.  0.  1.  1.  0.  1.  0.  0.  1.  0.  0.\n",
-      "  1.  1.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.  1.  1.  0.  0.  0.  0.\n",
-      "  0.  0.  1.  0.  1.  0.  1.  0.  0.  0.  1.  1.  0.  0.  1.  1.  0.  1.\n",
-      "  0.  1.  1.  0.  1.  0.  0.  0.  1.  0.  0.  1.  0.  0.  0.  1.  0.  0.\n",
-      "  1.  0.  1.  1.  0.  1.  0.  1.  1.  1.  0.  0.  0.  0.  0.  0.  0.  1.\n",
-      "  1.  0.  1.  0.  0.  0.  1.  0.  0.  0.  1.  0.  0.  1.  1.  0.  1.  0.\n",
-      "  0.  0.  1.  0.  1.  1.  0.  1.  1.  0.  0.  1.  0.  0.  0.  0.  0.  0.\n",
-      "  0.  1.  1.  1.  0.  1.  0.  1.  1.  0.  0.  1.  0.  0.  0.  1.  1.  0.\n",
-      "  0.  1.  0.  1.  0.  0.  0.  1.  1.  0.  0.  0.  0.  0.  0.  1.  0.  0.\n",
-      "  1.  1.  0.  0.  1.  0.  0.  0.  0.  1.  1.  1.  0.  0.  1.  0.  0.  0.]\n"
+      "258.000000     | [14. 25. 28. 35. 42. 45. 18. 26. 35. 45. 55. 65.  0. 10. 15. 37. 50. 51.\n",
+      "  3. 10. 15. 20. 23. 31.  5. 15. 18. 23. 28. 31.  0.  3.  6. 15. 31. 35.\n",
+      "  0.  1.  0.  1.  0.  1.  0.  1.  1.  0.  1.  0.  1.  0.  1.  0.  0.  0.\n",
+      "  0.  1.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.  1.  0.  1.  0.  0.  0.\n",
+      "  0.  0.  1.  0.  0.  0.  0.  0.  0.  0.  0.  1.  0.  1.  1.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.\n",
+      "  1.  0.  0.  1.  1.  1.  0.  0.  0.  1.  1.  0.  1.  0.  0.  1.  1.  0.\n",
+      "  1.  0.  0.  0.  0.  0.  0.  0.  1.  0.  0.  0.  1.  1.  0.  0.  0.  0.\n",
+      "  0.  1.  0.  1.  1.  0.  0.  0.  1.  0.  1.  1.  0.  0.  0.  0.  0.  1.\n",
+      "  0.  1.  0.  1.  1.  0.  0.  0.  0.  0.  0.  1.  1.  0.  1.  1.  0.  0.\n",
+      "  0.  0.  1.  1.  0.  1.  1.  0.  0.  0.  0.  0.  0.  1.  0.  0.  1.  1.\n",
+      "  0.  0.  0.  0.  0.  0.  1.  0.  0.  0.  1.  0.  0.  0.  1.  0.  1.  0.\n",
+      "  0.  0.  0.  0.  1.  0.  0.  0.  0.  1.  0.  1.  0.  0.  0.  0.  1.  0.\n",
+      "  0.  0.  1.  0.  0.  0.  0.  0.  1.  1.  1.  0.  1.  0.  1.  0.  0.  0.\n",
+      "  0.  1.  0.  0.  0.  1.  1.  1.  0.  0.  1.  0.  0.  0.  0.  0.  1.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  1.  1.  0.  0.  1.  0.  0.  0.  0.  0.  1.  1.]\n"
      ]
     }
    ],
@@ -362,7 +362,8 @@
     "    beta=beta,\n",
     "    timeout_in_secs=timeout_in_seconds,\n",
     "    num_engines=num_engines,\n",
-    "    num_chains=num_chains\n",
+    "    num_chains=num_chains,\n",
+    "    penalty_scaling=5\n",
     ")\n",
     "\n",
     "print(\"-\" * 15, \"+\", \"-\" * 26, sep=\"\")\n",
@@ -389,9 +390,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/brian/miniconda3/envs/algorithms_repo_env/lib/python3.12/site-packages/plotly/express/_core.py:1985: FutureWarning:\n",
+      "\n",
+      "When grouping with a length-1 list-like, you will need to pass a length-1 tuple to get_group in a future version of pandas. Pass `(name,)` instead of `name` to silence this warning.\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -402,76 +413,76 @@
         {
          "alignmentgroup": "True",
          "base": [
-          "2025-03-19",
-          "2025-03-20",
+          "2025-04-07",
+          "2025-04-18",
+          "2025-04-21",
+          "2025-04-28",
+          "2025-05-05",
+          "2025-05-08",
+          "2025-04-11",
+          "2025-04-19",
+          "2025-04-28",
+          "2025-05-08",
+          "2025-05-18",
+          "2025-05-28",
           "2025-03-24",
-          "2025-03-29",
-          "2025-04-05",
-          "2025-04-08",
           "2025-04-03",
+          "2025-04-08",
+          "2025-04-30",
+          "2025-05-13",
+          "2025-05-14",
+          "2025-03-27",
+          "2025-04-03",
+          "2025-04-08",
+          "2025-04-13",
+          "2025-04-16",
+          "2025-04-24",
+          "2025-03-29",
+          "2025-04-08",
           "2025-04-11",
           "2025-04-16",
-          "2025-04-26",
-          "2025-04-27",
-          "2025-05-02",
-          "2025-03-20",
-          "2025-03-25",
-          "2025-04-08",
-          "2025-04-16",
-          "2025-04-25",
-          "2025-04-26",
-          "2025-03-20",
-          "2025-03-26",
-          "2025-03-31",
-          "2025-04-05",
-          "2025-04-08",
-          "2025-04-16",
-          "2025-03-22",
-          "2025-03-31",
-          "2025-04-03",
-          "2025-04-08",
-          "2025-04-12",
-          "2025-04-15",
-          "2025-03-19",
-          "2025-03-22",
-          "2025-03-25",
-          "2025-04-03",
-          "2025-04-14",
-          "2025-04-17",
-          "2025-03-20",
-          "2025-03-23",
+          "2025-04-21",
+          "2025-04-24",
+          "2025-03-24",
+          "2025-03-27",
           "2025-03-30",
-          "2025-04-05",
           "2025-04-08",
-          "2025-04-14",
+          "2025-04-24",
+          "2025-04-28",
+          "2025-04-08",
+          "2025-04-21",
+          "2025-04-27",
+          "2025-05-05",
+          "2025-05-08",
+          "2025-05-14",
+          "2025-04-19",
+          "2025-04-24",
+          "2025-05-08",
+          "2025-05-18",
+          "2025-05-28",
+          "2025-06-01",
+          "2025-03-29",
+          "2025-04-07",
+          "2025-04-16",
+          "2025-05-09",
+          "2025-05-14",
+          "2025-05-21",
+          "2025-04-01",
+          "2025-04-08",
+          "2025-04-13",
+          "2025-04-16",
+          "2025-04-24",
+          "2025-05-03",
+          "2025-04-07",
           "2025-04-11",
           "2025-04-16",
-          "2025-04-26",
-          "2025-05-06",
-          "2025-05-07",
-          "2025-05-06",
-          "2025-03-25",
-          "2025-03-29",
-          "2025-04-16",
+          "2025-04-20",
+          "2025-04-24",
           "2025-04-25",
-          "2025-04-26",
-          "2025-05-03",
-          "2025-03-25",
-          "2025-03-31",
-          "2025-04-05",
+          "2025-03-27",
+          "2025-03-30",
           "2025-04-08",
-          "2025-04-16",
-          "2025-04-25",
-          "2025-03-31",
-          "2025-04-03",
-          "2025-04-08",
-          "2025-04-12",
-          "2025-04-15",
-          "2025-04-16",
-          "2025-03-22",
-          "2025-03-25",
-          "2025-04-03",
-          "2025-04-13"
+          "2025-04-18"
          ],
          "hovertemplate": "<b>%{hovertext}</b><br><br>Job=<br>Start=%{base}<br>Finish=%{x}<br>Machine=%{y}<extra></extra>",
          "hovertext": [
@@ -709,12 +720,12 @@
         {
          "alignmentgroup": "True",
          "base": [
-          "2025-03-19",
-          "2025-03-20",
-          "2025-03-24",
-          "2025-03-29",
-          "2025-04-05",
-          "2025-04-08"
+          "2025-04-07",
+          "2025-04-18",
+          "2025-04-21",
+          "2025-04-28",
+          "2025-05-05",
+          "2025-05-08"
          ],
          "hovertemplate": "<b>%{hovertext}</b><br><br>Job=Job1<br>Start=%{base}<br>Finish=%{x}<br>Machine=%{y}<extra></extra>",
          "hovertext": [
@@ -760,12 +771,12 @@
         {
          "alignmentgroup": "True",
          "base": [
-          "2025-04-03",
           "2025-04-11",
-          "2025-04-16",
-          "2025-04-26",
-          "2025-04-27",
-          "2025-05-02"
+          "2025-04-19",
+          "2025-04-28",
+          "2025-05-08",
+          "2025-05-18",
+          "2025-05-28"
          ],
          "hovertemplate": "<b>%{hovertext}</b><br><br>Job=Job2<br>Start=%{base}<br>Finish=%{x}<br>Machine=%{y}<extra></extra>",
          "hovertext": [
@@ -811,12 +822,12 @@
         {
          "alignmentgroup": "True",
          "base": [
-          "2025-03-20",
-          "2025-03-25",
+          "2025-03-24",
+          "2025-04-03",
           "2025-04-08",
-          "2025-04-16",
-          "2025-04-25",
-          "2025-04-26"
+          "2025-04-30",
+          "2025-05-13",
+          "2025-05-14"
          ],
          "hovertemplate": "<b>%{hovertext}</b><br><br>Job=Job3<br>Start=%{base}<br>Finish=%{x}<br>Machine=%{y}<extra></extra>",
          "hovertext": [
@@ -862,12 +873,12 @@
         {
          "alignmentgroup": "True",
          "base": [
-          "2025-03-20",
-          "2025-03-26",
-          "2025-03-31",
-          "2025-04-05",
+          "2025-03-27",
+          "2025-04-03",
           "2025-04-08",
-          "2025-04-16"
+          "2025-04-13",
+          "2025-04-16",
+          "2025-04-24"
          ],
          "hovertemplate": "<b>%{hovertext}</b><br><br>Job=Job4<br>Start=%{base}<br>Finish=%{x}<br>Machine=%{y}<extra></extra>",
          "hovertext": [
@@ -913,12 +924,12 @@
         {
          "alignmentgroup": "True",
          "base": [
-          "2025-03-22",
-          "2025-03-31",
-          "2025-04-03",
+          "2025-03-29",
           "2025-04-08",
-          "2025-04-12",
-          "2025-04-15"
+          "2025-04-11",
+          "2025-04-16",
+          "2025-04-21",
+          "2025-04-24"
          ],
          "hovertemplate": "<b>%{hovertext}</b><br><br>Job=Job5<br>Start=%{base}<br>Finish=%{x}<br>Machine=%{y}<extra></extra>",
          "hovertext": [
@@ -964,12 +975,12 @@
         {
          "alignmentgroup": "True",
          "base": [
-          "2025-03-19",
-          "2025-03-22",
-          "2025-03-25",
-          "2025-04-03",
-          "2025-04-14",
-          "2025-04-17"
+          "2025-03-24",
+          "2025-03-27",
+          "2025-03-30",
+          "2025-04-08",
+          "2025-04-24",
+          "2025-04-28"
          ],
          "hovertemplate": "<b>%{hovertext}</b><br><br>Job=Job6<br>Start=%{base}<br>Finish=%{x}<br>Machine=%{y}<extra></extra>",
          "hovertext": [
@@ -1015,40 +1026,40 @@
         {
          "alignmentgroup": "True",
          "base": [
-          "2025-03-20",
-          "2025-03-23",
-          "2025-03-30",
-          "2025-04-05",
           "2025-04-08",
-          "2025-04-14",
+          "2025-04-21",
+          "2025-04-27",
+          "2025-05-05",
+          "2025-05-08",
+          "2025-05-14",
+          "2025-04-19",
+          "2025-04-24",
+          "2025-05-08",
+          "2025-05-18",
+          "2025-05-28",
+          "2025-06-01",
+          "2025-03-29",
+          "2025-04-07",
+          "2025-04-16",
+          "2025-05-09",
+          "2025-05-14",
+          "2025-05-21",
+          "2025-04-01",
+          "2025-04-08",
+          "2025-04-13",
+          "2025-04-16",
+          "2025-04-24",
+          "2025-05-03",
+          "2025-04-07",
           "2025-04-11",
           "2025-04-16",
-          "2025-04-26",
-          "2025-05-06",
-          "2025-05-07",
-          "2025-05-06",
-          "2025-03-25",
-          "2025-03-29",
-          "2025-04-16",
+          "2025-04-20",
+          "2025-04-24",
           "2025-04-25",
-          "2025-04-26",
-          "2025-05-03",
-          "2025-03-25",
-          "2025-03-31",
-          "2025-04-05",
+          "2025-03-27",
+          "2025-03-30",
           "2025-04-08",
-          "2025-04-16",
-          "2025-04-25",
-          "2025-03-31",
-          "2025-04-03",
-          "2025-04-08",
-          "2025-04-12",
-          "2025-04-15",
-          "2025-04-16",
-          "2025-03-22",
-          "2025-03-25",
-          "2025-04-03",
-          "2025-04-13"
+          "2025-04-18"
          ],
          "hovertemplate": "<b>%{hovertext}</b><br><br>Job=Hand-off<br>Start=%{base}<br>Finish=%{x}<br>Machine=%{y}<extra></extra>",
          "hovertext": [
@@ -2015,8 +2026,8 @@
          ],
          "dtick": "M1",
          "range": [
-          "2025-03-19",
-          "2025-05-08"
+          "2025-03-24",
+          "2025-06-02"
          ],
          "showgrid": true,
          "ticklabelmode": "period",
@@ -2075,16 +2086,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "49.0"
+       "69.0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
