Adding automatic requirements installation into notebooks

--- a/Clustering/example.ipynb
+++ b/Clustering/example.ipynb
@@ -8,6 +8,9 @@
    "source": [
     "# Copyright InfinityQ Tech 2024\n",
     "\n",
+    "# Installing Python dependencies\n",
+    "!pip install -r \"requirements.txt\" --upgrade\n",
+    "\n",
     "import json\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
