--- a/Index Tracking/index_tracking_gurobi.ipynb
+++ b/Index Tracking/index_tracking_gurobi.ipynb
@@ -20,6 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Installing Python dependencies\n",
+    "!pip install -r \"requirements.txt\" --upgrade\n",
+    "\n",
     "#Importing required libraries\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -144,11 +147,9 @@
    "source": [
     "print(\"Solving the model!\")\n",
     "#Optimize the model\n",
-    "\n",
-    "#This tells Gurobi when to stop, what objective to stop on\n",
     "t0 = time.time()\n",
     "model.optimize()\n",
-    "t1 = time.time()\n"
+    "t1 = time.time()"
    ]
   },
   {
