--- a/Index Tracking/index_tracking_titanq.ipynb
+++ b/Index Tracking/index_tracking_titanq.ipynb
@@ -20,6 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Installing Python dependencies\n",
+    "!pip install -r \"requirements.txt\" --upgrade\n",
+    "\n",
     "#Importing required libraries\n",
     "import numpy as np\n",
     "import time\n",
