--- a/MQLib Benchmarks/MQLib_Benchmarks.ipynb
+++ b/MQLib Benchmarks/MQLib_Benchmarks.ipynb
@@ -39,6 +39,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Installing Python dependencies\n",
+    "!pip install -r \"requirements.txt\" --upgrade\n",
+    "\n",
     "import numpy as np\n",
     "import logging\n",
     "from MQLib_utils import *\n",
