--- a/Portfolio Optimization/portfolio_strategy_backtesting.ipynb
+++ b/Portfolio Optimization/portfolio_strategy_backtesting.ipynb
@@ -21,6 +21,9 @@
    "source": [
     "# Copyright (c) 2024, InfinityQ Technology Inc.\n",
     "\n",
+    "# Installing Python dependencies\n",
+    "!pip install -r \"requirements.txt\" --upgrade\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import yfinance as yf\n",
