--- a/Quadratic Semi-Assignment Problem (QSAP)/example.ipynb
+++ b/Quadratic Semi-Assignment Problem (QSAP)/example.ipynb
@@ -8,6 +8,9 @@
    "source": [
     "# Copyright (c) 2024, InfinityQ Technology Inc.\n",
     "\n",
+    "# Installing Python dependencies\n",
+    "!pip install -r \"requirements.txt\" --upgrade\n",
+    "\n",
     "import numpy as np\n",
     "from problem_gen import *\n",
     "from titanq import Model, Vtype, Target, S3Storage\n",
