--- a/Job Shop Scheduling Problem (JSSP)/example_large.ipynb
+++ b/Job Shop Scheduling Problem (JSSP)/example_large.ipynb
@@ -8,6 +8,9 @@
    "source": [
     "# Copyright (c) 2024, InfinityQ Technology Inc.\n",
     "\n",
+    "# Installing Python dependencies\n",
+    "!pip install -r \"requirements.txt\" --upgrade\n",
+    "\n",
     "import numpy as np\n",
     "import utils\n",
     "import problem_gen\n",
