--- a/Portfolio Optimization/example.ipynb
+++ b/Portfolio Optimization/example.ipynb
@@ -8,6 +8,9 @@
    "source": [
     "# Copyright (c) 2025, InfinityQ Technology Inc.\n",
     "\n",
+    "# Installing Python dependencies\n",
+    "!pip install -r \"requirements.txt\" --upgrade\n",
+    "\n",
     "import numpy as np\n",
     "import yfinance as yf\n",
     "import logging\n",
