--- a/Warehouse Lending (Multiple Knapsack)/example.ipynb
+++ b/Warehouse Lending (Multiple Knapsack)/example.ipynb
@@ -8,6 +8,9 @@
    "source": [
     "# Copyright (c) 2024, InfinityQ Technology Inc.\n",
     "\n",
+    "# Installing Python dependencies\n",
+    "!pip install -r \"requirements.txt\" --upgrade\n",
+    "\n",
     "import copy\n",
     "import pprint\n",
     "import numpy as np\n",
