Adding prompts for API keys

--- a/Currency Arbitrage/arbitrage_titanq.ipynb
+++ b/Currency Arbitrage/arbitrage_titanq.ipynb
@@ -35,10 +35,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Enter your API key here\n",
     "# Obtain your API key by contacting --> support@infinityq.tech\n",
-    "\n",
-    "TITANQ_DEV_API_KEY = None\n",
-    "# Example: TITANQ_DEV_API_KEY = \"00000000-0000-0000-0000-000000000000\""
+    "# Example: TITANQ_DEV_API_KEY = \"00000000-0000-0000-0000-000000000000\"\n",
+    "TITANQ_DEV_API_KEY = input(\"Please enter your API key (e.g. 00000000-0000-0000-0000-000000000000):\")"
    ]
   },
   {
