--- a/Quadratic Semi-Assignment Problem (QSAP)/example.ipynb
+++ b/Quadratic Semi-Assignment Problem (QSAP)/example.ipynb
@@ -11,6 +11,7 @@
     "# Prompt the user and wait for an answer before installing dependencies.\n",
     "# Note: Usage of a virtual Python environment is recommended.\n",
     "if input(\"Install Python dependencies? [y/n]\").lower() == \"y\":\n",
+    "    print(\"Installing dependencies (this can take a few minutes)...\")\n",
     "    !pip install -r \"requirements.txt\" --upgrade\n",
     "else:\n",
     "    print(\"Skipping dependency installation.\")\n",
@@ -18,7 +19,10 @@
     "import numpy as np\n",
     "from problem_gen import *\n",
     "from titanq import Model, Vtype, Target, S3Storage\n",
-    "import logging"
+    "import logging\n",
+    "\n",
+    "logging.getLogger('botocore').setLevel(logging.CRITICAL)\n",
+    "logging.getLogger('urllib3').setLevel(logging.CRITICAL)"
    ]
   },
   {
@@ -35,13 +39,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logging.getLogger('botocore').setLevel(logging.CRITICAL)\n",
-    "logging.getLogger('urllib3').setLevel(logging.CRITICAL)\n",
-    "\n",
     "# Enter your API key here\n",
     "# Obtain your API key by contacting --> support@infinityq.tech\n",
     "# Example: TITANQ_DEV_API_KEY = \"00000000-0000-0000-0000-000000000000\"\n",
-    "TITANQ_DEV_API_KEY = None\n",
+    "TITANQ_DEV_API_KEY = input(\"Please enter your API key (e.g. 00000000-0000-0000-0000-000000000000):\")\n",
     "\n",
     "# Specify AWS keys and bucket name for solving very large problems\n",
     "# AWS_ACCESS_KEY = \"Access Key\"\n",
