--- a/Index Tracking/index_tracking_gurobi.ipynb
+++ b/Index Tracking/index_tracking_gurobi.ipynb
@@ -23,6 +23,7 @@
     "# Prompt the user and wait for an answer before installing dependencies.\n",
     "# Note: Usage of a virtual Python environment is recommended.\n",
     "if input(\"Install Python dependencies? [y/n]\").lower() == \"y\":\n",
+    "    print(\"Installing dependencies (this can take a few minutes)...\")\n",
     "    !pip install -r \"requirements.txt\" --upgrade\n",
     "else:\n",
     "    print(\"Skipping dependency installation.\")\n",
