--- a/Index Tracking/index_tracking_titanq.ipynb
+++ b/Index Tracking/index_tracking_titanq.ipynb
@@ -23,6 +23,7 @@
     "# Prompt the user and wait for an answer before installing dependencies.\n",
     "# Note: Usage of a virtual Python environment is recommended.\n",
     "if input(\"Install Python dependencies? [y/n]\").lower() == \"y\":\n",
+    "    print(\"Installing dependencies (this can take a few minutes)...\")\n",
     "    !pip install -r \"requirements.txt\" --upgrade\n",
     "else:\n",
     "    print(\"Skipping dependency installation.\")\n",
@@ -34,11 +35,19 @@
     "#TitanQ specific imports\n",
     "from titanq import Model, Vtype, Target\n",
     "#Library to help with model generation\n",
-    "import model_generation\n",
-    "\n",
+    "import model_generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Enter your API key here\n",
     "#Obtain your API key by contacting --> support@infinityq.tech\n",
     "#Example: TITANQ_DEV_API_KEY = \"00000000-0000-0000-0000-000000000000\"\n",
-    "TITANQ_DEV_API_KEY = None"
+    "TITANQ_DEV_API_KEY = input(\"Please enter your API key (e.g. 00000000-0000-0000-0000-000000000000):\")"
    ]
   },
   {
