--- a/MQLib Benchmarks/MQLib_Benchmarks.ipynb
+++ b/MQLib Benchmarks/MQLib_Benchmarks.ipynb
@@ -5,6 +5,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "TitanQ API Key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Enter your API Key Here\n",
+    "# Obtain your API key by contacting --> support@infinityq.tech\n",
+    "# Example: TITANQ_DEV_API_KEY = \"00000000-0000-0000-0000-000000000000\"\n",
+    "TITANQ_DEV_API_KEY = input(\"Please enter your API key (e.g. 00000000-0000-0000-0000-000000000000):\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "User Specifications"
    ]
   },
@@ -18,8 +37,6 @@
     "#Ex: \"g000989\"\n",
     "\n",
     "num_runs = 1\n",
-    "\n",
-    "TITANQ_DEV_API_KEY = \"Enter API Key Here\"\n",
     "\n",
     "instance_file_path = \"Enter File Path Here\" \n",
     "#Ex: \"hss-overview-benchmarks/qubos\""
@@ -42,6 +59,7 @@
     "# Prompt the user and wait for an answer before installing dependencies.\n",
     "# Note: Usage of a virtual Python environment is recommended.\n",
     "if input(\"Install Python dependencies? [y/n]\").lower() == \"y\":\n",
+    "    print(\"Installing dependencies (this can take a few minutes)...\")\n",
     "    !pip install -r \"requirements.txt\" --upgrade\n",
     "else:\n",
     "    print(\"Skipping dependency installation.\")\n",
