--- a/Portfolio Optimization/example.ipynb
+++ b/Portfolio Optimization/example.ipynb
@@ -11,6 +11,7 @@
     "# Prompt the user and wait for an answer before installing dependencies.\n",
     "# Note: Usage of a virtual Python environment is recommended.\n",
     "if input(\"Install Python dependencies? [y/n]\").lower() == \"y\":\n",
+    "    print(\"Installing dependencies (this can take a few minutes)...\")\n",
     "    !pip install -r \"requirements.txt\" --upgrade\n",
     "else:\n",
     "    print(\"Skipping dependency installation.\")\n",
@@ -23,7 +24,10 @@
     "import warnings\n",
     "\n",
     "# Filter out FutureWarning messages due to yfinance using a deprecated pandas keyword\n",
-    "warnings.simplefilter(action='ignore', category=FutureWarning)"
+    "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
+    "\n",
+    "logging.getLogger('botocore').setLevel(logging.CRITICAL)\n",
+    "logging.getLogger('urllib3').setLevel(logging.CRITICAL)"
    ]
   },
   {
@@ -40,13 +44,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logging.getLogger('botocore').setLevel(logging.CRITICAL)\n",
-    "logging.getLogger('urllib3').setLevel(logging.CRITICAL)\n",
-    "\n",
     "# Enter your API key here\n",
     "# Obtain your API key by contacting --> support@infinityq.tech\n",
     "# Example: TITANQ_DEV_API_KEY = \"00000000-0000-0000-0000-000000000000\"\n",
-    "TITANQ_DEV_API_KEY = None\n",
+    "TITANQ_DEV_API_KEY = input(\"Please enter your API key (e.g. 00000000-0000-0000-0000-000000000000):\")\n",
     "\n",
     "# Specify AWS keys and bucket name for solving very large problems\n",
     "# AWS_ACCESS_KEY = \"Access Key\"\n",
