--- a/Currency Arbitrage/arbitrage_titanq.ipynb
+++ b/Currency Arbitrage/arbitrage_titanq.ipynb
@@ -8,6 +8,14 @@
    "source": [
     "# Copyright (c) 2025, InfinityQ Technology Inc.\n",
     "\n",
+    "# Prompt the user and wait for an answer before installing dependencies.\n",
+    "# Note: Usage of a virtual Python environment is recommended.\n",
+    "if input(\"Install Python dependencies? [y/n]\").lower() == \"y\":\n",
+    "    print(\"Installing dependencies (this can take a few minutes)...\")\n",
+    "    !pip install -r \"requirements.txt\" --upgrade\n",
+    "else:\n",
+    "    print(\"Skipping dependency installation.\")\n",
+    "\n",
     "import numpy as np\n",
     "import logging\n",
     "from model_generation import *\n",
